# time-trex

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml
backend/app/: config.py  errors.py  factory.py  models.py  schemas.py  timeutils.py  utils.py
backend/app/activities/: routes.py  service.py
backend/app/auth/: routes.py  service.py
backend/app/entries/: routes.py  service.py
backend/app/routes/: health.py
backend/app/stats/: routes.py  service.py
backend/bruno-requests/T-Rex Time/: Health.yml  opencollection.yml
backend/bruno-requests/T-Rex Time/activities/: Create.yml  Delete.yml  Get.yml  List.yml  Update.yml  folder.yml
backend/bruno-requests/T-Rex Time/auth/: Login.yml  Me.yml  Regsiter.yml
backend/bruno-requests/T-Rex Time/entries/: List.yml  (+6 more)
backend/migrations/versions/: c75f0bb8fe71_initial_users_activities_time_entries.py
backend/tests/: conftest.py  test_activities.py  test_auth.py  test_entries.py  test_health.py  test_models.py  test_stats.py
frontend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
frontend/app/: __init__.py  backend_client.py  config.py  errors.py  factory.py  filters.py  security.py
frontend/app/activities/: routes.py
frontend/app/auth/: routes.py
frontend/app/stats/: routes.py
frontend/app/templates/: base.html
frontend/app/tracking/: routes.py
frontend/tests/: conftest.py  test_activities.py  test_auth.py  test_backend_client.py  test_skeleton.py  test_stats.py  test_tracking.py
(+14 files in other folders)
